--- a/config.json
+++ b/config.json
@@ -10,6 +10,8 @@
     },
     "parts": [
         { "id": "d9ae5656-9e5e-4991-b4e4-343897a11f28", "path": "/system" },
-        { "id": "35e64bc0-1268-477a-9327-94e880e67866", "path": "/player" }
+        { "id": "35e64bc0-1268-477a-9327-94e880e67866", "path": "/player" },
+        { "id": "70787873-1fc4-4604-af5b-88c747ec5f48", "path": "/sensor" },
+        { "id": "71e333b2-4276-4f0b-9272-233a171d8343", "path": "/doorbell" }
     ]
 }
